<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">chunhan-Assignment1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="whatsup1">WHATSUP</string>
    <string name="counter">Click Me!</string>
    <string name="editButton">Edit</string>
    <string name="addCounter">Add</string>
    <string name="saveChange">Save</string>
    <string name="cancelButton">Cancel</string>
    <string name="inputName">Name</string>
    <string name="counterName">Counter Name</string>
    <string name="counterName1">Counter Name:</string>
    <string name="readB">read</string>
    <string name="backButton">Back</string>
    <string name="summaryButton">Summary</string>
    <string name="resetButton">Reset Count</string>
    <string name="deleteButton">Delete Counter</string>
    <string name="count">0</string>
    <string name="backButton1">Back</string>

</resources>
